--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
   
-  <link href="https://example.orgcss/animate.css" rel="stylesheet">
+  <link href="http://62.100.204.6:81/css/animate.css" rel="stylesheet">
 
   
   
-    <link href="https://example.orgcss/style.subdivision.css" rel="stylesheet" id="theme-stylesheet">
+    <link href="http://62.100.204.6:81/css/style.subdivision.css" rel="stylesheet" id="theme-stylesheet">
   
 
 
   
-  <link href="https://example.orgcss/custom.css" rel="stylesheet">
+  <link href="http://62.100.204.6:81/css/custom.css" rel="stylesheet">
 
   
   
@@ -46,14 +46,14 @@
   
 
   
-  <link rel="shortcut icon" href="https://example.orgimg/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="https://example.orgimg/apple-touch-icon.png" />
+  <link rel="shortcut icon" href="http://62.100.204.6:81/img/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="http://62.100.204.6:81/img/apple-touch-icon.png" />
   
 
-  <link href="https://example.orgcss/owl.carousel.css" rel="stylesheet">
-  <link href="https://example.orgcss/owl.theme.css" rel="stylesheet">
+  <link href="http://62.100.204.6:81/css/owl.carousel.css" rel="stylesheet">
+  <link href="http://62.100.204.6:81/css/owl.theme.css" rel="stylesheet">
 
-  <link rel="alternate" href="https://example.org/index.xml" type="application/rss+xml" title="Universal">
+  <link rel="alternate" href="http://62.100.204.6:81/index.xml" type="application/rss+xml" title="Universal">
 
   
   <meta property="og:title" content="Universal" />
@@ -635,12 +635,12 @@
 
 <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyCFhtWLJcE30xOAjcbSFi-0fnoVmQZPb1Y&v=3.exp"></script>
 
-<script src="https://example.orgjs/hpneo.gmaps.js"></script>
-<script src="https://example.orgjs/gmaps.init.js"></script>
-<script src="https://example.orgjs/front.js"></script>
+<script src="http://62.100.204.6:81/js/hpneo.gmaps.js"></script>
+<script src="http://62.100.204.6:81/js/gmaps.init.js"></script>
+<script src="http://62.100.204.6:81/js/front.js"></script>
 
 
-<script src="https://example.orgjs/owl.carousel.min.js"></script>
+<script src="http://62.100.204.6:81/js/owl.carousel.min.js"></script>
 
 
 </body>
