--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
   
-  <link href="www.subdivisiongames.com/css/animate.css" rel="stylesheet">
+  <link href="css/animate.css" rel="stylesheet">
 
   
   
-    <link href="www.subdivisiongames.com/css/style.subdivision.css" rel="stylesheet" id="theme-stylesheet">
+    <link href="css/style.subdivision.css" rel="stylesheet" id="theme-stylesheet">
   
 
 
   
-  <link href="www.subdivisiongames.com/css/custom.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
 
   
   
@@ -46,19 +46,19 @@
   
 
   
-  <link rel="shortcut icon" href="www.subdivisiongames.com/img/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="www.subdivisiongames.com/img/apple-touch-icon.png" />
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
   
 
-  <link href="www.subdivisiongames.com/css/owl.carousel.css" rel="stylesheet">
-  <link href="www.subdivisiongames.com/css/owl.theme.css" rel="stylesheet">
+  <link href="css/owl.carousel.css" rel="stylesheet">
+  <link href="css/owl.theme.css" rel="stylesheet">
 
   <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Universal">
 
   
   <meta property="og:title" content="Universal" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="www.subdivisiongames.com//" />
+  <meta property="og:url" content="//" />
   <meta property="og:image" content="img/logo.png" />
 
 </head>
@@ -635,12 +635,12 @@
 
 <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyCFhtWLJcE30xOAjcbSFi-0fnoVmQZPb1Y&v=3.exp"></script>
 
-<script src="www.subdivisiongames.com/js/hpneo.gmaps.js"></script>
-<script src="www.subdivisiongames.com/js/gmaps.init.js"></script>
-<script src="www.subdivisiongames.com/js/front.js"></script>
+<script src="js/hpneo.gmaps.js"></script>
+<script src="js/gmaps.init.js"></script>
+<script src="js/front.js"></script>
 
 
-<script src="www.subdivisiongames.com/js/owl.carousel.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
 
 
 </body>
