--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="robots" content="all,follow">
   <meta name="googlebot" content="index,follow,snippet,archive">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Universal</title>
+  <title>Subdivision Games</title>
   <meta name="author" content="" />
 
   
@@ -54,10 +54,10 @@
   <link href="css/owl.carousel.css" rel="stylesheet">
   <link href="css/owl.theme.css" rel="stylesheet">
 
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Universal">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Subdivision Games">
 
   
-  <meta property="og:title" content="Universal" />
+  <meta property="og:title" content="Subdivision Games" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="//" />
   <meta property="og:image" content="img/logo.png" />
